<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">scanner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="register">注册</string>
	<string name="logIn">登录</string>
	<string name="username">用户名</string>
	<string name="password">密码</string>
	<string name="submit">提交</string>
	<string name="cancel">取消</string>
	<string name="test">帅哥你好！</string>
	<string name="email">邮箱</string>
	<string name="phone">手机号</string>
	<string name="validateCode">验证码</string>
	<string name="change">换一张</string>
	<string name="fileName">文件名</string>
	<string name="fileSize">文件大小</string>
	<string name="createTime">创建时间</string>
	<string name="add">添加</string>
	<string name="retu">返回</string>
	<string name="rotate">旋转</string>
	<string name="save">保存</string>
</resources>
