<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView 
        android:id="@+id/fileTextView1"
        android:layout_width="100sp"
        android:layout_height="25sp"
        android:text="@string/fileName"
    >
    </TextView>

    <TextView
        android:id="@+id/fileTextView2"
        android:layout_width="100sp"
        android:layout_height="25sp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/fileTextView1"
        android:text="@string/fileSize" />

    <ListView
        android:id="@+id/mainListView"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/fileTextView1" >
    </ListView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="100sp"
        android:layout_height="25sp"
        android:layout_above="@+id/mainListView"
        android:layout_toRightOf="@+id/fileTextView2"
        android:text="@string/createTime" />

</RelativeLayout>
